--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,7 +1,9 @@
 - title: "50% off at Store A"
   description: "Get a massive 50% discount at Store A. Limited time offer!"
   link: "https://store-a-link.com"
+  image: "/assets/img/store-a.jpeg"
   
 - title: "Buy one get one at Store B"
   description: "BOGO offer at Store B. Grab it now!"
   link: "https://store-b-link.com"
+  image: "/assets/img/store-b.jpeg"
