--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,9 +1,9 @@
-- title: "50% off at Store A"
-  description: "Get a massive 50% discount at Store A. Limited time offer!"
-  link: "https://store-a-link.com"
-  image: "/assets/img/store-a.jpeg"
+- title: "Emri i kompanise A"
+  description: "Pershkrimi i kompanise"
+  link: "https://webfaqja.com"
+  image: "/assets/img/tannins.jpeg"
   
-- title: "Buy one get one at Store B"
-  description: "BOGO offer at Store B. Grab it now!"
-  link: "https://store-b-link.com"
-  image: "/assets/img/store-b.jpeg"
+- title: "Emri i kompanise B"
+  description: "Pershkrimi i kompanise"
+  link: "https://webfaqja.com"
+  image: "/assets/img/tannins.jpeg"
