Adding new brands.

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,9 +1,9 @@
-- title: "Emri i kompanise A"
-  description: "Pershkrimi i kompanise"
+- title: "Derimod"
+  description: "Derimod"
   link: "https://webfaqja.com"
-  image: "/assets/img/tannins.jpeg"
+  image: "/assets/img/derimod.jpg"
   
-- title: "Emri i kompanise B"
+- title: "US Polo"
   description: "Pershkrimi i kompanise"
   link: "https://webfaqja.com"
-  image: "/assets/img/tannins.jpeg"
+  image: "/assets/img/uspolo.jpg"
