Added webpages for companies.

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,9 +1,9 @@
 - title: "Derimod"
   description: "Derimod"
-  link: "https://webfaqja.com"
+  link: "https://www.facebook.com/DerimodKS/"
   image: "/assets/img/derimod.jpg"
   
 - title: "US Polo"
   description: "Pershkrimi i kompanise"
-  link: "https://webfaqja.com"
+  link: "hhttps://www.facebook.com/p/US-Polo-Assn-Kosova-100025054753371/"
   image: "/assets/img/uspolo.jpg"
