Adding new brands.

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -38,3 +38,14 @@
   link: "https://www.instagram.com/nocturne.kosova/"
   image: "/assets/img/nocturne.jpeg"
 
+
+- title: "Idea M"
+  description: "Material shkollor dhe material per zyre."
+  link: "https://www.facebook.com/ideastore.ks"
+  image: "/assets/img/ideam.jpeg"
+
+
+- title: "Gamestar"
+  description: "Bejmë shitjen dhe servisimin e Sony Playstation."
+  link: "https://www.facebook.com/gamestarks"
+  image: "/assets/img/gamestar.png"
