Added new brands.

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -38,14 +38,123 @@
   link: "https://www.instagram.com/nocturne.kosova/"
   image: "/assets/img/nocturne.jpeg"
 
-
 - title: "Idea M"
   description: "Material shkollor dhe material per zyre."
   link: "https://www.facebook.com/ideastore.ks"
   image: "/assets/img/ideam.jpeg"
 
-
 - title: "Gamestar"
   description: "Bejmë shitjen dhe servisimin e Sony Playstation."
   link: "https://www.facebook.com/gamestarks"
   image: "/assets/img/gamestar.png"
+
+- title: "Kimark"
+  description: "Kimark ju mirepret me oferta te reja."
+  link: "https://www.facebook.com/profile.php?id=100078508849286"
+  image: "/assets/img/kimark.jpeg"
+
+- title: "Othoman Home"
+  description: "Elegancë minimaliste dhe bukuri e kontrasteve, koleksioni ynë i ri i pjatave i ka të gjitha!🖤"
+  link: "https://www.facebook.com/othman.home"
+  image: "/assets/img/othoman.jpeg"
+
+- title: "ADL"
+  description: "Në kohë me modën, ku secila do të gjejë ngjyrën e saj!"
+  link: "https://www.facebook.com/adlkosova"
+  image: "/assets/img/adl.jpeg"
+
+- title: "Faik Sönmez"
+  description: "Hoş Geldiniz! Online Alışveriş: www.faiksonmez.com Keyifli alışveriş parmaklarınızın ucunda. Üstelik"
+  link: "https://www.facebook.com/faiksonmezmoda"
+  image: "/assets/img/faiksonmez.jpeg"
+
+- title: "Fisi Gold"
+  description: "Every woman need's to feel confident and beautiful.."
+  link: "https://www.facebook.com/fisigold"
+  image: "/assets/img/fisigold.jpeg"
+
+- title: "ORA - Watches & Jewelry"
+  description: "Kompani e specializuar për shitjen dhe rregullimin e orëve të dorës, bizhuterive dhe syzeve."
+  link: "https://www.facebook.com/oragroup.ks"
+  image: "/assets/img/orawatches.jpeg"
+
+
+- title: "Rosa Canina Pharmacy"
+  description: "Gjithmonë me një përgjegjësi të plotë për shëndetin tuaj."
+  link: "https://www.facebook.com/RosaCaninaPharmacy"
+  image: "/assets/img/rosacanina.jpeg"
+
+- title: "Matmazel"
+  description: "Handmade bags&shoes"
+  link: "https://www.instagram.com/matmazelstore.ks"
+  image: "/assets/img/matmazel.jpeg"
+
+- title: "Garda Shoes"
+  description: "Deri ne 70% zbritje. Garda Shoes permban brendet si: Timberland, Guess, Replay, Geos, Skechers, Under Armour."
+  link: "https://www.facebook.com/gardashoes.rks"
+  image: "/assets/img/gardashoes.jpeg"
+
+
+- title: "Gerbera Flower Shop"
+  description: "Dashuro me stil 👌, dhuro me zemër❤️"
+  link: ""
+  image: "/assets/img/gerberaflower.jpeg"
+
+- title: "Aztech"
+  description: "AZTECH është kompani lider në Kosovë në shitjen me pakicë të produkteve elektroshtëpiake."
+  link: "https://www.facebook.com/AZTECHKS"
+  image: "/assets/img/aztech.jpeg"
+
+- title: "Bonatti"
+  description: "Veshje te brendshme per femra dhe meshkuj"
+  link: "https://www.facebook.com/bonattikosovo"
+  image: "/assets/img/bonatti.jpeg"
+
+- title: "Intersport"
+  description: "Produkte dhe veshje sportive të modës së fundit për meshkuj, femra dhe fëmijë ju presin në dyqanin online INTERSPORT."
+  link: "https://intersportks.com/"
+  image: "/assets/img/intersport.jpeg"
+
+- title: "Sizeer"
+  description: "Shfrytëzoni Zbritjen e fundit të sezonës!"
+  link: "https://www.instagram.com/sizeerks/"
+  image: "/assets/img/sizeer.jpeg"
+
+- title: "Steps"
+  description: "Shfrytëzoni Zbritjen e fundit të sezonës!"
+  link: "https://www.instagram.com/stepsks/"
+  image: "/assets/img/steps.jpeg"
+
+- title: "Buton"
+  description: "Shfrytëzoni Zbritjen e fundit të sezonës!"
+  link: "https://www.instagram.com/butonelectronics/"
+  image: "/assets/img/button.jpeg"
+
+- title: "Giotelli"
+  description: "Shfrytëzoni Zbritjen e fundit të sezonës !"
+  link: "https://www.facebook.com/giotellikosovo/"
+  image: "/assets/img/giotelli.jpeg"
+
+- title: "Nike"
+  description: "Shfrytëzoni Zbritjen e fundit të sezonës!"
+  link: "https://www.nike.com/retail/s/pristina"
+  image: "/assets/img/nike.jpeg"
+
+- title: "Flutra"
+  description: "Shfrytëzoni Zbritjen e fundit të sezonës!"
+  link: "https://www.facebook.com/flutrashoes/?locale=sq_AL"
+  image: "/assets/img/flutrashoes.jpeg"
+
+- title: "Fortesa Boutique"
+  description: "Shfrytëzoni Zbritjen e fundit të sezonës!"
+  link: "https://www.instagram.com/fortesa__boutique/"
+  image: "/assets/img/fortesa.jpeg"
+
+- title: "Alix Avien"
+  description: "Shfrytëzoni Zbritjen e fundit të sezonës!"
+  link: "https://www.instagram.com/fortesa__boutique/"
+  image: "/assets/img/aliexavien.png"
+
+
+
+
